--- a/.github/workflows/pr-main.yml
+++ b/.github/workflows/pr-main.yml
@@ -133,6 +133,16 @@ jobs:
       artifact_release_run_id: ${{ needs.build-ttxla-release.outputs.artifacts_run_id }}
       wheel_release_artifact_name: ${{ needs.build-ttxla-release.outputs.wheel_artifact_name }}
 
+  test-tools:
+    if: needs.inspect-changes.outputs.skip-build-and-test == 'false'
+    uses: ./.github/workflows/call-test-tools.yml
+    secrets: inherit
+    needs: [ inspect-changes, build-image, build-ttxla-release ]
+    with:
+      docker_image: ${{ needs.build-image.outputs.docker-image }}
+      wheel_artifact_name: ${{ needs.build-ttxla-release.outputs.wheel_artifact_name }}
+      artifacts_run_id: ${{ needs.build-ttxla-release.outputs.artifacts_run_id }}
+
   build-docs:
     if: needs.inspect-changes.outputs.skip-build-and-test == 'false'
     needs: [ inspect-changes, build-image, build-ttxla-release ]
@@ -152,6 +162,7 @@ jobs:
       - test
       - test_forge_models_push
       - test_models_on_uplift
+      - test-tools
       - perf-benchmark-n150
       - perf-benchmark-llmbox
       - build-docs
@@ -160,5 +171,5 @@ jobs:
     - name: Check if the needed jobs succeeded or failed
       uses: re-actors/alls-green@release/v1
       with:
-        allowed-skips: build-image, build-ttxla-release, build-ttxla-explorer, build-ttxla-debug, test, test_forge_models_push, build-docs, test_models_on_uplift, perf-benchmark-n150, perf-benchmark-llmbox
+        allowed-skips: build-image, build-ttxla-release, build-ttxla-explorer, build-ttxla-debug, test, test_forge_models_push, build-docs, test_models_on_uplift, test-tools, perf-benchmark-n150, perf-benchmark-llmbox
         jobs: ${{ toJSON(needs) }}
