--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,7 +43,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti")
 
-option(TTMLIR_ENABLE_PERF_TRACE "Enable performance tracing in tt-mlir" OFF)
+option(TTMLIR_ENABLE_PERF_TRACE "Enable performance tracing in tt-mlir" ON)
 option(TTMLIR_ENABLE_BINDINGS_PYTHON "Enable Python bindings in tt-mlir" OFF)
 option(TTXLA_ENABLE_EXPLORER "Enable Explorer feature in tt-mlir" OFF)
 option(TTXLA_ENABLE_PJRT_TESTS "Enable PJRT tests" OFF)
@@ -55,7 +55,6 @@ set(TTMLIR_BUILD_TYPE "Release" CACHE STRING "Build type for tt-mlir")
 set_property(CACHE TTMLIR_BUILD_TYPE PROPERTY STRINGS "Debug" "Release" "RelWithDebInfo" "MinSizeRel")
 
 if(TTXLA_ENABLE_EXPLORER)
-    set(TTMLIR_ENABLE_PERF_TRACE ON)
     set(TTMLIR_ENABLE_BINDINGS_PYTHON ON)
 endif()
 
@@ -93,6 +92,7 @@ endif()
 add_subdirectory(pjrt_implementation/src)
 add_subdirectory(third_party)
 add_subdirectory(docs)
+add_subdirectory(python_package)
 
 if(TTXLA_ENABLE_PJRT_TESTS)
     add_subdirectory(tests/pjrt)
