--- a/.github/workflows/call-test.yml
+++ b/.github/workflows/call-test.yml
@@ -19,6 +19,10 @@ on:
         description: 'Name of the wheel artifact (release vllm-tt)'
         required: false
         type: string
+      alchemist_artifact_name:
+        description: 'Name of the alchemist library artifact'
+        required: false
+        type: string
       test_suite:
         description: 'Test suite preset options or custom'
         required: true
@@ -103,6 +107,7 @@ jobs:
           integrations/vllm_plugin/requirements-vllm-plugin.txt
           tests
           venv
+          examples
 
     - name: Fetch job id
       id: fetch-job-id
@@ -122,6 +127,7 @@ jobs:
         echo "perf_report_dir=$(pwd)/benchmark_reports" >> "$GITHUB_OUTPUT"
         echo "wheel_artifact_name=${{ inputs.wheel_release_artifact_name }}" >> "$GITHUB_OUTPUT"
         echo "wheel_release_vllm_tt_artifact_name=${{ inputs.wheel_release_vllm_tt_artifact_name }}" >> "$GITHUB_OUTPUT"
+        echo "alchemist_artifact_name=${{ inputs.alchemist_artifact_name }}" >> "$GITHUB_OUTPUT"
         echo "artifact_run_id=${{ inputs.artifact_release_run_id }}" >> "$GITHUB_OUTPUT"
 
         # Precompute forge models detection as a reusable output
@@ -155,6 +161,26 @@ jobs:
         echo "=== Installing wheel ==="
         source venv/activate
         pip install wheels/*.whl
+
+    - name: Download and setup alchemist library
+      shell: bash
+      run: |
+        if [[ -n "${{ steps.strings.outputs.alchemist_artifact_name }}" ]]; then
+          echo "=== Downloading alchemist artifact ==="
+          mkdir -p alchemist_artifact
+          gh run download ${{ steps.strings.outputs.artifact_run_id }} \
+            --repo ${{ github.repository }} \
+            --dir alchemist_artifact \
+            --name ${{ steps.strings.outputs.alchemist_artifact_name }} || echo "Alchemist artifact not found, codegen tests will be skipped"
+          # Set up the directory structure that venv/activate expects for TT_MLIR_HOME
+          mkdir -p third_party/tt-mlir/src/tt-mlir/build
+          if [[ -d alchemist_artifact/lib ]]; then
+            mv alchemist_artifact/lib third_party/tt-mlir/src/tt-mlir/build/
+          fi
+          if [[ -d alchemist_artifact/tools ]]; then
+            mv alchemist_artifact/tools third_party/tt-mlir/src/tt-mlir/build/
+          fi
+        fi
 
     - name: Check for re-run attempt
       id: check-rerun-attempt
