--- a/.github/workflows/schedule-nightly.yml
+++ b/.github/workflows/schedule-nightly.yml
@@ -60,17 +60,17 @@ jobs:
       wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
 
   # Commented out to test IR processing on only passing models
-  # test_forge_models_xfail:
-  #   uses: ./.github/workflows/call-test.yml
-  #   secrets: inherit
-  #   needs: [ build-image, build-ttxla ]
-  #   # This ensures the job runs regardless of success or failure of `nightly_tests`:
-  #   if: success() || failure()
-  #   with:
-  #     test_suite: model-test-xfail.json
-  #     docker_image: ${{ needs.build-image.outputs.docker-image }}
-  #     artifact_release_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
-  #     wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
+  test_forge_models_xfail:
+    uses: ./.github/workflows/call-test.yml
+    secrets: inherit
+    needs: [ build-image, build-ttxla ]
+    # This ensures the job runs regardless of success or failure of `nightly_tests`:
+    if: success() || failure()
+    with:
+      test_suite: model-test-xfail.json
+      docker_image: ${{ needs.build-image.outputs.docker-image }}
+      artifact_release_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
+      wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
 
   # Commented out - replaced by test_forge_models_passing with --dump-irs
   # test_single_model_with_ir_dump:
@@ -86,7 +86,7 @@ jobs:
 
   process_dumped_irs:
     runs-on: tt-ubuntu-2204-n150-stable
-    needs: [ build-image, build-ttxla, test_forge_models_passing ]
+    needs: [ build-image, build-ttxla, test_forge_models_xfail, test_forge_models_passing ]
     if: success() || failure()
     strategy:
       fail-fast: false
@@ -256,7 +256,7 @@ jobs:
           echo "=== Running op-by-op tests ==="
           python3 -m pytest -svv tests/op_by_op/op_by_op_test.py::test_op_by_op \
             --folder=collected_irs \
-            --ir-file-prefix="irs/ttnn" \
+            --ir-file-prefix="irs/shlo_compiler" \
             --json-report \
             --json-report-file=op_by_op_report.json \
             || echo "Op-by-op test completed with failures"
