--- a/tests/pjrt/CMakeLists.txt
+++ b/tests/pjrt/CMakeLists.txt
@@ -9,26 +9,28 @@
 
 include(FetchContent)
 
-# TODO(acicovic): Investigate why this is needed here and in /third_party/.
-if(CMAKE_C_COMPILER MATCHES "clang-17")
-    set(CMAKE_C_COMPILER "/usr/bin/clang-17" CACHE STRING "" FORCE)
+if(TTXLA_ENABLE_PJRT_TESTS)
+    # TODO(acicovic): Investigate why this is needed here and in /third_party/.
+    if(CMAKE_C_COMPILER MATCHES "clang-17")
+        set(CMAKE_C_COMPILER "/usr/bin/clang-17" CACHE STRING "" FORCE)
+    endif()
+    if(CMAKE_CXX_COMPILER MATCHES "clang\\+\\+-17")
+        set(CMAKE_CXX_COMPILER "/usr/bin/clang++-17" CACHE STRING "" FORCE)
+    endif()
+
+    # DEVNOTE: googletest is a CMake project with well-exposed targets and a
+    # dependency needed only for testing, so it will not be added to this repository
+    # as an external source tree in /third_party.
+    FetchContent_Declare(googletest
+        GIT_REPOSITORY https://github.com/google/googletest.git
+        GIT_TAG v1.14.0
+        GIT_SHALLOW ON
+    )
+
+    FetchContent_MakeAvailable(googletest)
+
+    add_executable(TTPJRTTests test_main.cc)
 endif()
-if(CMAKE_CXX_COMPILER MATCHES "clang\\+\\+-17")
-    set(CMAKE_CXX_COMPILER "/usr/bin/clang++-17" CACHE STRING "" FORCE)
-endif()
-
-# DEVNOTE: googletest is a CMake project with well-exposed targets and a
-# dependency needed only for testing, so it will not be added to this repository
-# as an external source tree in /third_party.
-FetchContent_Declare(googletest
-    GIT_REPOSITORY https://github.com/google/googletest.git
-    GIT_TAG v1.14.0
-    GIT_SHALLOW ON
-)
-
-FetchContent_MakeAvailable(googletest)
-
-add_executable(TTPJRTTests test_main.cc)
 
 # Gather all test sources (various unit test and mock test directories.)
 
