--- a/python_package/requirements.txt
+++ b/python_package/requirements.txt
@@ -1,5 +1,6 @@
 jax==0.7.1
 jaxlib==0.7.1
 requests
+loguru
 torch==2.9.0
 torch-xla@https://pypi.eng.aws.tenstorrent.com/torch-xla/torch_xla-2.9.0%2Bgit061c1e7-cp311-cp311-linux_x86_64.whl
